# rusyll

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/rusyll/: rusyll.py
tests/: test_rusyll.py
