[tool.poetry]
name = "rusyll"
version = "0.1.1"
description = "Splitting Russian words into phonetic syllables"
authors = ["Simon Weiss <wonder@simonweiss.space>"]
readme = "README.md"
homepage = "https://github.com/weiss-d/rusyll"
repository = "https://github.com/weiss-d/rusyll"
license = "MIT"
keywords = ["syllables", "Russian", "language", "phonetic", "phonology"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[tool.poetry.scripts]
rusyll = "rusyll.rusyll:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

